--- a/publications.html
+++ b/publications.html
@@ -115,11 +115,19 @@ p { line-height: 1.7em; }
 
   <div class="publications-container">
 
+  <h2>Full articles published in journals</h2>
+
+<div class="publications-container">
+
+<div class="publication">
+    <strong>GROPPO, B. B.; MORALES, M. J.; BELINTANI, TIAGO; GADANUCCI, J. P.</strong> High diversity and population structure in a widespread tarantula <em>Sickius longibulbi</em> (Mygalomorphae: Theraphosidae). <em>Zoologischer Anzeiger</em>, 2025.
+  </div>
+    <div class="publications-container">
+
   <h2>Artigos completos publicados em periódicos</h2>
 
   <div class="publication">
-    <strong>PAIVA, V. F. ; OLIVEIRA, J. ; BELINTANI, TIAGO ; GALVÃO, CLEBER ; GIL-SANTANA, H. ; ROSA, JOÃO ARISTEU DA .</strong> Hospesneotomae n. gen. of the Triatomini tribe presents a turnaround in the taxonomy of the Triatoma protracta species complex. Scientific Reports, v. 15, p. 8143, 2025. <br>
-    Citações: 2
+    <strong>PAIVA, V. F. ; OLIVEIRA, J. ; BELINTANI, TIAGO ; GALVÃO, CLEBER ; GIL-SANTANA, H. ; ROSA, JOÃO ARISTEU DA .</strong> Hospesneotomae n. gen. of the Triatomini tribe presents a turnaround in the taxonomy of the Triatoma protracta species complex. Scientific Reports, v. 15, p. 8143, 2025. <br>Citações: 2
   </div>
 
   <div class="publication">
@@ -127,8 +135,7 @@ p { line-height: 1.7em; }
   </div>
 
   <div class="publication">
-    <strong>SANTOS SANTANA, JOCIEL KLLEYTON ; BELINTANI, TIAGO ; ARISTEU DA ROSA, JOÃO ; DE OLIVEIRA, JADER .</strong> Presence of Rhodnius neglectus Lent, 1954 (Hemiptera: Reduviidae: Triatominae) in Araraquara, São Paulo, Brazil: signals the importance of surveillance for the municipality. Revista Chilena de Entomologia, v. 50, p. 375-381, 2024. <br>
-    Citações: 1
+    <strong>SANTOS SANTANA, JOCIEL KLLEYTON ; BELINTANI, TIAGO ; ARISTEU DA ROSA, JOÃO ; DE OLIVEIRA, JADER .</strong> Presence of Rhodnius neglectus Lent, 1954 (Hemiptera: Reduviidae: Triatominae) in Araraquara, São Paulo, Brazil: signals the importance of surveillance for the municipality. Revista Chilena de Entomologia, v. 50, p. 375-381, 2024. <br>Citações: 1
   </div>
 
   <div class="publication">
@@ -136,48 +143,39 @@ p { line-height: 1.7em; }
   </div>
 
   <div class="publication">
-    <strong>PEIXOTO, S. ; BELINTANI, T. ; ROCHA, D. ; FONTES, F. ; GALVÃO, CLEBER .</strong> Characterization of Triatoma infestans (Klug, 1834) (Hemiptera: Heteroptera, Reduviidae) from Residual Foci in the States of Bahia and Rio Grande do Sul, Brazil, Using Geometric Morphology. INSECTS, v. 14, p. 325, 2023. <br>
-    Citações: 1
+    <strong>PEIXOTO, S. ; BELINTANI, T. ; ROCHA, D. ; FONTES, F. ; GALVÃO, CLEBER .</strong> Characterization of Triatoma infestans (Klug, 1834) from Residual Foci in Bahia and Rio Grande do Sul, Brazil, Using Geometric Morphology. INSECTS, v. 14, p. 325, 2023. <br>Citações: 1
   </div>
 
   <div class="publication">
-    <strong>BELINTANI, T.; CONGRAINS, C. ; PINOTTI, HELOISA ; CHAHAD-EHLERS, S. ; BRITO, R. A. ; OLIVEIRA, J. ; FRIAS-LASSERRE, D. ; FONTES, F. M. ; ROSA, J. A. .</strong> Transcriptome-based phylogenomic analysis reveals evidence of ancient hybridization events in the Mepraia genus (Hemiptera: Reduviidae: Triatominae). FRONTIERS IN ECOLOGY AND EVOLUTION, v. 11, p. 1-1, 2023. <br>
-    Citações: 3
+    <strong>BELINTANI, T.; CONGRAINS, C. ; PINOTTI, HELOISA ; CHAHAD-EHLERS, S. ; BRITO, R. A. ; OLIVEIRA, J. ; FRIAS-LASSERRE, D. ; FONTES, F. M. ; ROSA, J. A. .</strong> Transcriptome-based phylogenomic analysis reveals evidence of ancient hybridization events in the Mepraia genus (Hemiptera: Reduviidae: Triatominae). FRONTIERS IN ECOLOGY AND EVOLUTION, v. 11, p. 1-1, 2023. <br>Citações: 3
   </div>
 
   <div class="publication">
-    <strong>KUNII, G. K. W ; FALCONE, R. ; GRAMINHA, M. A. S. ; NASCIMENTO, J. D. ; BELINTANI, T. ; OLIVEIRA, J. ; CLEMENTINO, L. C. ; ROSA, J. A. .</strong> Growth Curve, Morphological and Molecular Characterization of Two Strains of Trypanosoma cruzi isolated from Triatoma sherlocki. SOCIEDADE BRASILEIRA DE MEDICINA TROPICAL. REVISTA, v. 55, p. 55:e05212021, 2022. <br>
-    Citações: 1
+    <strong>KUNII, G. K. W ; FALCONE, R. ; GRAMINHA, M. A. S. ; NASCIMENTO, J. D. ; BELINTANI, T. ; OLIVEIRA, J. ; CLEMENTINO, L. C. ; ROSA, J. A. .</strong> Growth Curve, Morphological and Molecular Characterization of Two Strains of Trypanosoma cruzi isolated from Triatoma sherlocki. SOCIEDADE BRASILEIRA DE MEDICINA TROPICAL. REVISTA, v. 55, p. 55:e05212021, 2022. <br>Citações: 1
   </div>
 
   <div class="publication">
-    <strong>CACINI, G. L. ; OLIVEIRA, J. ; BELINTANI, T. ; SOUZA, E. ; OLAIA, N. ; PINTO, M. C. ; ROSA, J. A. .</strong> Immature instars of three species of Rhodnius Stål, 1859: morphology, morphometry and taxonomic implications. Parasites & Vectors, v. 1, p. 1-16, 2022. <br>
-    Citações: 4
+    <strong>CACINI, G. L. ; OLIVEIRA, J. ; BELINTANI, T. ; SOUZA, E. ; OLAIA, N. ; PINTO, M. C. ; ROSA, J. A. .</strong> Immature instars of three species of Rhodnius Stål, 1859: morphology, morphometry and taxonomic implications. Parasites & Vectors, v. 1, p. 1-16, 2022. <br>Citações: 4
   </div>
 
   <div class="publication">
-    <strong>BELINTANI, T.; PAIVA, V. F. ; OLIVEIRA, J. ; ROSA, J. A. .</strong> New in morphometry: geometric morphometry of the external female genitalia of Triatominae. ACTA TROPICA, v. 1, p. 106383, 2022. <br>
-    Citações: 6
+    <strong>BELINTANI, T.; PAIVA, V. F. ; OLIVEIRA, J. ; ROSA, J. A. .</strong> New in morphometry: geometric morphometry of the external female genitalia of Triatominae. ACTA TROPICA, v. 1, p. 106383, 2022. <br>Citações: 6
   </div>
 
   <div class="publication">
-    <strong>SILVA, L. A. ; BELINTANI, T. ; PAIVA, V. F. ; NASCIMENTO, JULIANA DAMIELI ; Rimoldi, A ; GARDIM, S. ; MELLO, F. ; OBARA, M. ; OLIVEIRA, J. ; ROSA, J. A. .</strong> Integrative taxonomy and phylogenetic systematics of the Triatoma rubrovaria subcomplex. ACTA TROPICA, v. -, p. 106699, 2022. <br>
-    Citações: 1
+    <strong>SILVA, L. A. ; BELINTANI, T. ; PAIVA, V. F. ; NASCIMENTO, JULIANA DAMIELI ; Rimoldi, A ; GARDIM, S. ; MELLO, F. ; OBARA, M. ; OLIVEIRA, J. ; ROSA, J. A. .</strong> Integrative taxonomy and phylogenetic systematics of the Triatoma rubrovaria subcomplex. ACTA TROPICA, v. -, p. 106699, 2022. <br>Citações: 1
   </div>
 
   <div class="publication">
-    <strong>KAWASIMA, E. S. ; PAIVA, V. F. ; BELINTANI, T. ; H.H.G, J. ; PINOTTI, HELOISA ; OLIVEIRA, J. ; ROSA, J. A. .</strong> Morphological studies of Cimex lectularius Linnaeus, 1758 (Hemiptera: Cimicidae). Revista Chilena de Entomologia, v. 48, p. 695-705, 2022. <br>
-    Citações: 1
+    <strong>KAWASIMA, E. S. ; PAIVA, V. F. ; BELINTANI, T. ; H.H.G, J. ; PINOTTI, HELOISA ; OLIVEIRA, J. ; ROSA, J. A. .</strong> Morphological studies of Cimex lectularius Linnaeus, 1758 (Hemiptera: Cimicidae). Revista Chilena de Entomologia, v. 48, p. 695-705, 2022. <br>Citações: 1
   </div>
 
   <div class="publication">
-    <strong>PAIVA, V. F. ; BELINTANI, T. ; OLIVEIRA, JADER ; GALVÃO, CLÉBER ; ROSA, J. A. .</strong> A review of the taxonomy and biology of Triatominae subspecies. PARASITOLOGY RESEARCH, v. 1, p. 1, 2022. <br>
-    Citações: 22
+    <strong>PAIVA, V. F. ; BELINTANI, T. ; OLIVEIRA, JADER ; GALVÃO, CLÉBER ; ROSA, J. A. .</strong> A review of the taxonomy and biology of Triatominae subspecies. PARASITOLOGY RESEARCH, v. 1, p. 1, 2022. <br>Citações: 22
   </div>
 
   <div class="publication">
-    <strong>BELINTANI, TIAGO; OLIVEIRA, JADER ; PINOTTI, HELOISA ; ALEVI, KAIO CESAR CHABOLI ; NASCIMENTO, JULIANA DAMIELI ; SASSO-CERRI, ESTELA ; GALVÃO, CLEBER ; ARISTEU DA ROSA, JOÃO .</strong> Characterization of Female External Genitalia and Eggs of Four South American Species of the Triatoma Laporte, 1832 Genus. INSECTS, v. 12, p. 537, 2021. <br>
-    Citações: 8
+    <strong>BELINTANI, TIAGO; OLIVEIRA, JADER ; PINOTTI, HELOISA ; ALEVI, KAIO CESAR CHABOLI ; NASCIMENTO, JULIANA DAMIELI ; SASSO-CERRI, ESTELA ; GALVÃO, CLEBER ; ARISTEU DA ROSA, JOÃO .</strong> Characterization of Female External Genitalia and Eggs of Four South American Species of the Triatoma Laporte, 1832 Genus. INSECTS, v. 12, p. 537, 2021. <br>Citações: 8
   </div>
 
   <div class="publication">
@@ -185,12 +183,47 @@ p { line-height: 1.7em; }
   </div>
 
   <div class="publication">
-    <strong>ROSSETO, L. ; PAIVA, V. F. ; BELINTANI, T. ; OLIVEIRA, J. ; MENDONCA, V. J. ; ROSA, JOÃO ARISTEU DA .</strong> Checklist and phenetics studies of nymphs of two species of triatomines. SOCIEDADE BRASILEIRA DE MEDICINA TROPICAL. REVISTA, v. 54, p. ---, 2021. <br>
-    Citações: 3
+    <strong>ROSSETO, L. ; PAIVA, V. F. ; BELINTANI, T. ; OLIVEIRA, J. ; MENDONCA, V. J. ; ROSA, JOÃO ARISTEU DA .</strong> Checklist and phenetics studies of nymphs of two species of triatomines. SOCIEDADE BRASILEIRA DE MEDICINA TROPICAL. REVISTA, v. 54, p. ---, 2021. <br>Citações: 3
   </div>
 
   <div class="publication">
-    <strong>BILHEIRO, ADRIANA BENATTI ; DA ROSA, JOÃO ARISTEU ; DE OLIVEIRA, JADER ; BELINTANI, TIAGO ; FONTES, GILBERTO ; MEDEIROS, JANSEN FERNAND
+    <strong>BILHEIRO, ADRIANA BENATTI ; DA ROSA, JOÃO ARISTEU ; DE OLIVEIRA, JADER ; BELINTANI, TIAGO ; FONTES, GILBERTO ; MEDEIROS, JANSEN FERNANDES ; JÚNIOR, ANTÔNIO MARQUES PEREIRA ; MENEGUETTI, DIONATAS ULISES DE OLIVEIRA ; CAMARGO, LUÍS MARCELO ARANHA .</strong> Biological Aspects of (Hemiptera, Reduviidae, Triatominae) Under Laboratory Conditions. VECTOR-BORNE AND ZOONOTIC DISEASES, v. 1, p. vbz.2019.2449, 2019. <br>Citações: 1
+  </div>
+
+  <div class="publication">
+    <strong>ALEVI, KAIO CESAR CHABOLI ; AUGUSTO, YURI ; DE OLIVEIRA, JADER ; BELINTANI, TIAGO ; DA SILVA, LUCAS ABRANTES ; DA ROSA, JOÃO ARISTEU ; DE AZEREDO OLIVEIRA, MARIA TERCÍLIA VILELA .</strong> Reproductive aspects of Chagas disease vectors with anatomical teratologies. ACTA TROPICA, v. 185, p. 251-254, 2018. <br>Citações: 1
+  </div>
+
+  <div class="publication">
+    <strong>BILHEIRO, ADRIANA BENATTI ; DA ROSA, JOÃO ARISTEU ; DE OLIVEIRA, JADER ; BELINTANI, TIAGO ; FONTES, GILBERTO ; MEDEIROS, JANSEN FERNANDES ; MENEGUETTI, DIONATAS ULISES DE OLIVEIRA ; CAMARGO, LUÍS MARCELO ARANHA .</strong> First Report of Natural Infection with Trypanosoma cruzi in Rhodnius montenegrensis in Western Amazon, Brazil. VECTOR BORNE AND ZOONOTIC DISEASES, v. 20, p. 1, 2018. <br>Citações: 20
+  </div>
+
+  <div class="publication">
+    <strong>OLIVEIRA, JADER ; MARCET, PAULA L. ; TAKIYA, DANIELA M. ; MENDONÇA, VAGNER J. ; BELINTANI, TIAGO ; BARGUES, MARIA D. ; MATEO, LUCIA ; CHAGAS, VIVIAN ; FOLLY-RAMOS, ELAINE ; CORDEIRO-ESTRELA, PEDRO ; GURGEL-GONÇALVES, RODRIGO ; COSTA, JANE ; DA ROSA, JOÃO A. ; ALMEIDA, CARLOS E. .</strong> Combined phylogenetic and morphometric information to delimit and unify the Triatoma brasiliensis species complex. ACTA TROPICA, v. 170, p. 140-148, 2017. <br>Citações: 46
+  </div>
+
+  <div class="publication">
+    <strong>DA ROSA, JOÃO ARISTEU ; SOUZA, EDER SANTOS ; DA COSTA TEIXEIRA, ADELSON ; BARBOSA, ROSENILDO RIBEIRO ; DE SOUZA, AECILDO JOSÉ ; BELINTANI, TIAGO ; NASCIMENTO, JULIANA DAMIELI ; GIL-SANTANA, HÉLCIO REINALDO ; DE OLIVEIRA, JADER .</strong> Third record of Rhodnius amazonicus and comparative study with R. pictipes. ACTA TROPICA, v. 176, p. 364-372, 2017. <br>Citações: 11
+  </div>
+
+        <h2>Book Chapters Published</h2>
+
+  <div class="publication">
+    <strong>VIGANO, L.; BELINTANI, TIAGO; ROSA, J. A.</strong> Laboratory Strategies for the Diagnosis of Chagas Disease. In: Meneguetti, D. U. de; Oliveira, J.; Ale...</div>
+    <em>Atualidades em Medicina Tropical no Brasil: Interdisciplinarity</em>. 1st ed. Rio Branco: Stricto Sensu, 2023, pp. 1-323.
+  </div>
+
+  <div class="publication">
+    <strong>PAIVA, V. F.; BELINTANI, TIAGO; OLIVEIRA, J.; SILVA, L. A.; ARISTEU DA ROSA, J.</strong> Entomoepidemiology of Chagas Disease in Southern Brazil: Collection of Triatominae in Seven Municipalities of Rio Grande do Sul. In: Oliveira, J.; Ale...</div>
+    <em>Atualidades em Medicina Tropical na América do Sul: Vectors</em>. 1st ed. Rio Branco: Stricto Sensu, 2021, pp. 1-345.
+  </div>
+
+  <div class="publication">
+    <strong>BELINTANI, T.; PAIVA, V. F.; ROSA, J. A.</strong> Phylogeny, Evolution and Dynamics of Parasitic Diseases and Their Vectors. In: Oliveira, J.; Ale...</div>
+    <em>Atualidades em Medicina Tropical no Brasil: Vectors</em>. 1st ed. Rio Branco: Stricto Sensu, 2020, pp. 0-262.
+  </div>
+
+</div>
 
 
 </body>
