--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@ a:hover { text-decoration: underline; }
   <h2>Contact</h2>
 
   <div class="section contact-info">
-    <p>Feel free to reach out via email or professional networks:</p>
+    <p>Contact us via email or professional networks:</p>
     <ul>
         <li>Email: <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></li>
         <li>Email: <a href="mailto:tiago.belintani@unesp.com">tiago.belintani@unesp.br</a></li>
@@ -121,7 +121,7 @@ a:hover { text-decoration: underline; }
   </div>
 
   <div class="section">
-    <p>BraveTheSun.</p>
+    <p>BraveTheSun</p>
   </div>
 </div>
 
