--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,15 +18,15 @@ body::before {
     pointer-events: none;
 }
 body {
-    position: relative;
-    z-index: 1;
+    margin: 0;
+    padding: 0;
     font-family: 'Courier New', monospace;
     color: #333;
     background: #fdfdfd;
-    margin: 0;
-    padding: 0;
     min-height: 100vh;
     line-height: 1.6;
+    position: relative;
+    z-index: 1;
 }
 
 /* ================= TOP NAVIGATION ================= */
@@ -66,7 +66,7 @@ body {
 .container {
     max-width: 1120px;
     margin: 0 auto;
-    padding: 120px 20px 40px; /* topo maior para menu fixo */
+    padding: 120px 20px 40px; /* espaço para menu fixo */
     position: relative;
     z-index: 1;
 }
@@ -78,7 +78,7 @@ body {
     align-items: flex-start;
     gap: 20px;
     margin-bottom: 40px;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
 }
 .top-images img {
     width: 45%;
@@ -86,22 +86,11 @@ body {
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     object-fit: cover;
-    flex-shrink: 0;
     transition: filter 0.3s, transform 0.2s;
 }
 .top-images img:hover {
     filter: brightness(1.15) contrast(1.1) saturate(1.1);
     transform: scale(1.02) rotate(-0.5deg);
-    z-index: 2;
-}
-@media (max-width: 800px) {
-    .top-images {
-        flex-direction: column;
-        align-items: center;
-    }
-    .top-images img {
-        width: 90%;
-    }
 }
 
 /* ================= HEADINGS ================= */
@@ -116,36 +105,38 @@ h1 span { display:block; margin:0.5em auto 0 auto; width:64px; border-bottom:3px
 h2 { font-size: 2em; margin-bottom:0.5em; }
 h3 { font-size: 1.6em; font-weight: 500; }
 
-/* ================= PARAGRAPHS & LISTS ================= */
-p, li { font-size: 1.1em; text-align: justify; }
-p.intro::first-letter {
-    float: left;
-    font-size: 3.1em;
-    line-height: 1;
-    font-weight: bold;
+/* ================= BIOGRAPHY SECTION ================= */
+.bio-container {
+    background: rgba(255,255,255,0.85);
+    padding: 30px 40px;
+    border-radius: 16px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.08);
+    margin: 40px auto;
+    max-width: 900px;
+    text-align: center;
+}
+.bio-container p {
+    font-size: 1.15em;
+    line-height: 1.8;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+/* ================= ACADEMIC LINKS ================= */
+.bio-links {
+    margin-top: 20px;
+    font-size: 1em;
+    text-align: center;
+}
+.bio-links a {
     color: #007b8a;
-    padding-right: 8px;
-    font-family: 'Space Grotesk', sans-serif;
+    text-decoration: none;
+    font-weight: 600;
+    margin: 0 10px;
 }
-ul { padding-left: 20px; margin-bottom: 0; }
-.section ul {
-    background: rgba(245,251,251,0.7);
-    border-radius: 12px;
-    box-shadow: 0 1px 10px rgba(0,124,138,0.07);
-    padding: 16px 24px;
+.bio-links a:hover {
+    text-decoration: underline;
 }
-.section ul li { margin-bottom: 0.5em; }
-
-/* ================= LINKS ================= */
-a { color: #006c7b; font-weight: bold; text-decoration: none; }
-a:hover { color: #004f59; text-decoration: underline; }
-
-/* ================= SECTIONS ================= */
-.section { margin-bottom: 50px; }
-
-/* ================= CV LINK ================= */
-.cv-link img { width: 48px; vertical-align: middle; margin-right: 12px; }
-.cv-link a { font-size: 1.2em; color: #007b8a; }
 
 /* ================= PROFILE PHOTO ================= */
 .profile-photo {
@@ -155,7 +146,6 @@ a:hover { color: #004f59; text-decoration: underline; }
 }
 .profile-photo img {
     width: 260px;
-    max-width: 98vw;
     height: auto;
     object-fit: contain;
     border-radius: 18px;
@@ -166,7 +156,14 @@ a:hover { color: #004f59; text-decoration: underline; }
 }
 .profile-photo img:hover { transform: scale(1.04); box-shadow: 0 6px 28px rgba(0,108,123,0.18); }
 
-/* ================= FOOTER BANNER ================= */
+/* ================= FOOTER ================= */
+footer {
+    text-align: center;
+    font-size: 0.9em;
+    color: #666;
+    padding: 20px 0;
+    margin-top: 40px;
+}
 .footer-banner {
     margin-top: 80px;
     width: 100%;
@@ -175,27 +172,17 @@ a:hover { color: #004f59; text-decoration: underline; }
         url('assets/images/vinicius-henrique-photography-A7GwggrhXm4-unsplash.jpg') center bottom no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    position: relative;
-    z-index: 1;
-}
-
-/* ================= FOOTER ================= */
-footer {
-    text-align: center;
-    font-size: 0.9em;
-    color: #666;
-    padding: 20px 0;
-    margin-top: -10px;
-    position: relative;
-    z-index: 1;
 }
 
 /* ================= RESPONSIVENESS ================= */
+@media (max-width: 800px) {
+    .top-images img { width: 90%; }
+}
 @media (max-width: 500px) {
     h1 { font-size: 2.2em; }
     h2 { font-size: 1.6em; }
     h3 { font-size: 1.3em; }
-    p, li { font-size: 1em; }
+    .bio-container p { font-size: 1em; }
 }
 </style>
 </head>
@@ -213,12 +200,6 @@ footer {
 
 <div class="container">
 
-    <!-- Epigraph / Poetic Quote -->
-    <div style="text-align:center; font-style:italic; font-size:1.25em; color:#333; margin-bottom:1.5em; margin-top:1em;">
-        “Nothing in biology makes sense except in the light of evolution.”<br>
-        <span style="font-size:0.95em; color:#666;">– Theodosius Dobzhansky</span>
-    </div>
-
     <!-- Top Images -->
     <div class="top-images">
         <img src="assets/images/imagem1.jpg" alt="DNA-themed research illustration">
@@ -229,31 +210,26 @@ footer {
     <h1>Tiago Belintani <span></span></h1>
     <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
 
-    <!-- Introduction -->
-    <p class="intro">
-        I am a postdoctoral researcher at São Paulo State University (UNESP), where I delve into the evolutionary biology, systematics, and phylogenomics of key Neotropical organisms. My research focuses primarily on two fascinating and ecologically significant groups: the <em>Triatominae</em> (blood-feeding insects and vectors of Chagas disease) and the <em>Theraphosidae</em> (the often misunderstood tarantulas).<br><br>
-        My academic background merges classical training in zoology with modern bioinformatics and genomic analysis. From dusty entomological collections to high-throughput DNA sequencing, my work seeks to understand the hidden patterns of diversification, adaptation, and biogeography. I combine tools such as geometric morphometrics, phylogenetic inference, and comparative genomics to trace evolutionary lineages and untangle species complexes.<br><br>
-        I believe science is both a narrative and an exploration. Each sequence, specimen, or cladogram contributes to a broader understanding of life’s tangled branches — and I’m here to map them with curiosity and rigor.
-    </p>
-
-    <!-- Academic Profiles -->
-    <div class="section">
-        <h2>📄 Academic Profiles</h2>
-        <ul>
-            <li><a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR" target="_blank">Google Scholar</a></li>
-            <li><a href="https://bv.fapesp.br/pt/pesquisador/728865/tiago-belintani/" target="_blank">FAPESP</a></li>
-            <li><a href="https://www.researchgate.net/profile/Tiago-Belintani" target="_blank">ResearchGate</a></li>
-            <li><a href="https://orcid.org/0000-0001-9485-1145" target="_blank">ORCID</a></li>
-            <li><a href="http://lattes.cnpq.br/8948388411348223" target="_blank">Lattes</a></li>
-            <li><a href="https://www.webofscience.com/wos/author/record/AAL-8293-2021" target="_blank">ResearcherID</a></li>
-        </ul>
+    <!-- Profile Photo -->
+    <div class="profile-photo">
+        <img src="assets/images/profile.jpg" alt="Tiago Belintani">
     </div>
 
-    <!-- CV -->
-    <div class="section cv-link">
-        <a href="assets/images/CV_TiagoBelintani.pdf" target="_blank">
-            <img src="assets/images/3846805.png" alt="CV icon">Access My CV
-        </a>
+    <!-- Biography Section -->
+    <div class="bio-container">
+        <p>
+            I am a postdoctoral researcher at São Paulo State University (UNESP), exploring the evolutionary biology, systematics, and phylogenomics of key Neotropical organisms. My research focuses primarily on two fascinating and ecologically significant groups: the <em>Triatominae</em> (blood-feeding insects and vectors of Chagas disease) and the <em>Theraphosidae</em> (the often misunderstood tarantulas).<br><br>
+            My academic path merges classical zoological training with modern bioinformatics and genomic analysis. From dusty entomological collections to high-throughput DNA sequencing, I aim to uncover hidden patterns of diversification, adaptation, and biogeography. I utilize tools such as geometric morphometrics, phylogenetic inference, and comparative genomics to trace evolutionary lineages and resolve complex species relationships.<br><br>
+            I see science as both narrative and exploration. Every sequence, specimen, and cladogram contributes to a broader understanding of life’s tangled branches — and I map them with curiosity, rigor, and enthusiasm.
+        </p>
+        <div class="bio-links">
+            <a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR" target="_blank">Google Scholar</a> | 
+            <a href="https://bv.fapesp.br/pt/pesquisador/728865/tiago-belintani/" target="_blank">FAPESP</a> | 
+            <a href="https://www.researchgate.net/profile/Tiago-Belintani" target="_blank">ResearchGate</a> | 
+            <a href="https://orcid.org/0000-0001-9485-1145" target="_blank">ORCID</a> | 
+            <a href="http://lattes.cnpq.br/8948388411348223" target="_blank">Lattes</a> | 
+            <a href="https://www.webofscience.com/wos/author/record/AAL-8293-2021" target="_blank">ResearcherID</a>
+        </div>
     </div>
 
 </div>
