--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body {
     justify-content: center;
     align-items: flex-start;
     gap: 20px;
-    margin-bottom: 40px;
+    margin: 60px auto;
     flex-wrap: wrap;
 }
 .top-images img {
@@ -203,16 +203,9 @@ footer {
 
 <div class="container">
 
-    <!-- Top Images -->
-    <div class="top-images">
-        <img src="assets/images/imagem1.jpg" alt="DNA-themed research illustration">
-        <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
-    </div>
-
     <!-- Name & Title -->
     <h1>Tiago Belintani <span></span></h1>
     <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
-
 
     <!-- Biography Section -->
     <div class="bio-container">
@@ -233,6 +226,12 @@ footer {
         <a href="https://www.webofscience.com/wos/author/record/AAL-8293-2021" target="_blank">ResearcherID</a>
     </div>
 
+    <!-- Top Images moved to bottom -->
+    <div class="top-images">
+        <img src="assets/images/imagem1.jpg" alt="DNA-themed research illustration">
+        <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
+    </div>
+
 </div>
 
 <!-- Footer Banner -->
@@ -246,3 +245,4 @@ footer {
 
 </body>
 </html>
+
