--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@ body {
     z-index: 1;
 }
 
+/* ================= HEADER BANNER ================= */
+.header-banner {
+    width: 100%;
+    height: 300px;
+    background: linear-gradient(to bottom, rgba(255,255,255,1), rgba(255,255,255,0.6), rgba(255,255,255,0)),
+        url('assets/images/arte-expertise.jpg') center top no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    opacity: 0.9;
+}
+
 /* ================= TOP NAVIGATION ================= */
 .top-nav {
     position: fixed;
@@ -78,7 +89,7 @@ body {
     justify-content: center;
     align-items: flex-start;
     gap: 20px;
-    margin: 60px auto;
+    margin-bottom: 40px;
     flex-wrap: wrap;
 }
 .top-images img {
@@ -191,6 +202,9 @@ footer {
 </head>
 <body>
 
+<!-- Header Banner -->
+<div class="header-banner"></div>
+
 <!-- Top Navigation -->
 <nav class="top-nav">
     <ul>
@@ -202,6 +216,12 @@ footer {
 </nav>
 
 <div class="container">
+
+    <!-- Top Images -->
+    <div class="top-images">
+        <img src="assets/images/imagem1.jpg" alt="DNA-themed research illustration">
+        <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
+    </div>
 
     <!-- Name & Title -->
     <h1>Tiago Belintani <span></span></h1>
@@ -224,12 +244,6 @@ footer {
         <a href="https://orcid.org/0000-0001-9485-1145" target="_blank">ORCID</a> | 
         <a href="http://lattes.cnpq.br/8948388411348223" target="_blank">Lattes</a> | 
         <a href="https://www.webofscience.com/wos/author/record/AAL-8293-2021" target="_blank">ResearcherID</a>
-    </div>
-
-    <!-- Top Images moved to bottom -->
-    <div class="top-images">
-        <img src="assets/images/imagem1.jpg" alt="DNA-themed research illustration">
-        <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
     </div>
 
 </div>
