--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ body {
 /* ================= HEADER BANNER ================= */
 .header-banner {
     width: 100%;
-    height: 300px;
+    height: 180px;
     background: linear-gradient(to bottom, rgba(255,255,255,1), rgba(255,255,255,0.6), rgba(255,255,255,0)),
-        url('assets/images/arte-expertise.jpg') center top no-repeat;
+        url('assets/images/arte-expertise.jpg') center center no-repeat;
     background-size: cover;
     background-attachment: fixed;
     opacity: 0.9;
@@ -242,21 +242,6 @@ footer {
         <a href="https://bv.fapesp.br/pt/pesquisador/728865/tiago-belintani/" target="_blank">FAPESP</a> | 
         <a href="https://www.researchgate.net/profile/Tiago-Belintani" target="_blank">ResearchGate</a> | 
         <a href="https://orcid.org/0000-0001-9485-1145" target="_blank">ORCID</a> | 
-        <a href="http://lattes.cnpq.br/8948388411348223" target="_blank">Lattes</a> | 
-        <a href="https://www.webofscience.com/wos/author/record/AAL-8293-2021" target="_blank">ResearcherID</a>
-    </div>
+        <a href="http://lattes.cnpq.br/8948388411348223" target="_blank_
 
-</div>
-
-<!-- Footer Banner -->
-<div class="footer-banner"></div>
-
-<!-- Footer -->
-<footer>
-    © 2025 Tiago Belintani<br>
-    <span style="font-size:0.85em;color:#aaa;">Sapientia et disciplina</span>
-</footer>
-
-</body>
-</html>
 
