--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@ footer {
         <a href="https://bv.fapesp.br/pt/pesquisador/728865/tiago-belintani/" target="_blank">FAPESP</a> | 
         <a href="https://www.researchgate.net/profile/Tiago-Belintani" target="_blank">ResearchGate</a> | 
         <a href="https://orcid.org/0000-0001-9485-1145" target="_blank">ORCID</a> | 
+        <a href="https://github.com/TiagoBelintani" target="_blank">GITHUB</a> | 
         <a href="http://lattes.cnpq.br/8948388411348223" target="_blank">Lattes</a> | 
         <a href="https://www.webofscience.com/wos/author/record/AAL-8293-2021" target="_blank">ResearcherID</a>
     </div>
