--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@ footer {
     <!-- Biography Section -->
     <div class="bio-container">
         <p>
-            I am a postdoctoral researcher at São Paulo State University (UNESP), exploring the evolutionary biology, systematics, and phylogenomics of key Neotropical organisms. My research focuses primarily on two fascinating and ecologically significant groups: the <em>Triatominae</em> (blood-feeding insects and vectors of Chagas disease) and the <em>Theraphosidae</em> (the often misunderstood tarantulas).<br><br>
-            My academic path merges classical zoological training with modern bioinformatics and genomic analysis. From dusty entomological collections to high-throughput DNA sequencing, I aim to uncover hidden patterns of diversification, adaptation, and biogeography. I utilize tools such as geometric morphometrics, phylogenetic inference, and comparative genomics to trace evolutionary lineages and resolve complex species relationships.<br><br>
-            I see science as both narrative and exploration. Every sequence, specimen, and cladogram contributes to a broader understanding of life’s tangled branches — and I map them with curiosity, rigor, and enthusiasm.
+            I am a postdoctoral researcher at São Paulo State University (UNESP), exploring the evolutionary biology, systematics, and phylogenomics of key Neotropical organisms. My research focuses primarily on two fascinating and ecologically significant groups: the Triatominae (blood-feeding insects and vectors of Chagas disease) and the Theraphosidae (the often misunderstood tarantulas).<br><br>
+            Currently, supported by high-throughput sequencing, I seek to uncover hidden patterns of diversification, adaptation, and biogeography. To achieve this, I employ tools such as geometric morphometrics, phylogenetic inference, and comparative genomics, which allow me to trace evolutionary lineages and elucidate complex relationships among species.
+            I see science as storytelling and exploration. Each sequence, specimen, and phylogeny contributes to a broader understanding of the tangled strands of life—and I map them with curiosity, rigor, and enthusiasm.
         </p>
     </div>
 
